k8s/applications/web/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: web
  labels:
    app.kubernetes.io/name: homepage
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: homepage
